--- a/SellerScreen/MainWindow.xaml
+++ b/SellerScreen/MainWindow.xaml
@@ -698,7 +698,70 @@
                             </StackPanel>
                         </StackPanel>
                     </Grid>
-                    <Grid x:Name="Page3Grid" Visibility="Collapsed"/>
+                    <Grid x:Name="Page3Grid" Visibility="Visible">
+                        <TextBlock HorizontalAlignment="Left" Margin="10" Text="Hilfe und Support" VerticalAlignment="Top" TextTrimming="CharacterEllipsis" FontSize="25"/>
+                        <StackPanel x:Name="Page3ContentGrid" Margin="0,100,0,0">
+                            <StackPanel Orientation="Horizontal">
+                                <Image Height="300" Source="Resources/IMG_3766.png" Width="500" Margin="50">
+                                    <Image.Effect>
+                                        <DropShadowEffect BlurRadius="30"/>
+                                    </Image.Effect>
+                                </Image>
+                                <StackPanel>
+                                    <StackPanel Orientation="Horizontal" Margin="10">
+                                        <TextBlock>
+                                        <Run FontSize="40" Text="T-App Germany"/>
+                                        <LineBreak/>
+                                        <Run FontSize="20" Text="Software Development"/>
+                                        <LineBreak/>
+                                        </TextBlock>
+                                    </StackPanel>
+                                    <StackPanel Orientation="Horizontal">
+                                        <Viewbox HorizontalAlignment="Left" Margin="10">
+                                            <Rectangle Width="32" Height="32">
+                                                <Rectangle.Fill>
+                                                    <DrawingBrush>
+                                                        <DrawingBrush.Drawing>
+                                                            <DrawingGroup>
+                                                                <DrawingGroup.Children>
+                                                                    <GeometryDrawing Brush="#00FFFFFF" Geometry="F1M16,16L0,16 0,0 16,0z" />
+                                                                    <GeometryDrawing Brush="#FFF6F6F6" Geometry="F1M16,11.0005L9.998,11.0005C9.924,11.8055 9.666,12.5045 9.205,13.0715 8.892,13.4595 8.524,13.7495 8.115,13.9365L8.115,15.2945 7.502,15.5515C6.813,15.8405 5.967,15.9865 4.986,15.9865 3.523,15.9865 2.316,15.5315 1.398,14.6335 0.471,13.7335 0,12.5515 0,11.1215 0,9.6675 0.488,8.4375 1.45,7.4675 1.622,7.2945 1.812,7.1555 2,7.0125L2,0.000499999999998835 16,0.000499999999998835z" />
+                                                                    <GeometryDrawing Brush="#FF424242" Geometry="F1M5.0586,9.5278C4.7036,9.5278 4.4136,9.7018 4.1956,10.0508 3.9746,10.4028 3.8656,10.8388 3.8656,11.3598 3.8656,11.7078 3.9396,11.9848 4.0856,12.1878 4.2346,12.3888 4.4316,12.4908 4.6796,12.4908 5.0356,12.4908 5.3186,12.3068 5.5296,11.9378 5.7366,11.5728 5.8396,11.0848 5.8396,10.4808 5.8396,9.8428 5.5796,9.5278 5.0586,9.5278 M5.8356,12.1348L5.8106,12.1348C5.5766,12.8348 5.1176,13.1818 4.4356,13.1818 3.9996,13.1818 3.6506,13.0178 3.3826,12.6938 3.1156,12.3678 2.9826,11.9278 2.9826,11.3798 2.9826,10.6488 3.1656,10.0438 3.5316,9.5608 3.8966,9.0788 4.3786,8.8388 4.9766,8.8388 5.2046,8.8388 5.4066,8.9008 5.5856,9.0238 5.7656,9.1488 5.8786,9.2988 5.9316,9.4728L5.9476,9.4728C5.9566,9.3828,5.9806,9.1958,6.0196,8.9168L6.8286,8.9168C6.6756,10.6258 6.5996,11.4968 6.5996,11.5278 6.5996,12.1708 6.7676,12.4908 7.1016,12.4908 7.4086,12.4908 7.6626,12.3128 7.8616,11.9538 8.0646,11.5958 8.1636,11.1318 8.1636,10.5608 8.1636,9.7188 7.8926,9.0318 7.3476,8.5008 6.8046,7.9668 6.0486,7.6998 5.0836,7.6998 4.1566,7.6998 3.3926,8.0238 2.7836,8.6688 2.1756,9.3108 1.8706,10.1178 1.8706,11.0888 1.8706,12.0438 2.1636,12.8128 2.7476,13.3988 3.3336,13.9848 4.1216,14.2798 5.1116,14.2798 5.8946,14.2798 6.5626,14.1468 7.1156,13.8798L7.1156,14.6298C6.5466,14.8678 5.8376,14.9868 4.9866,14.9868 3.7906,14.9868 2.8266,14.6318 2.0976,13.9188 1.3656,13.2078 0.9996,12.2738 0.9996,11.1218 0.9996,9.9328 1.3866,8.9518 2.1606,8.1718 2.9336,7.3908 3.9196,7.0008 5.1226,7.0008 6.2496,7.0008 7.1836,7.3278 7.9236,7.9828 8.6626,8.6368 9.0316,9.4908 9.0316,10.5418 9.0316,11.3128 8.8316,11.9458 8.4296,12.4398 8.0296,12.9358 7.5386,13.1818 6.9606,13.1818 6.2146,13.1818 5.8376,12.8348 5.8356,12.1348" />
+                                                                    <GeometryDrawing Brush="#FFDCB67A" Geometry="F1M10,7.0005L8.266,7.0005C8.372,7.0795 8.486,7.1445 8.586,7.2335 9.411,7.9645 9.864,8.9005 9.98,10.0005L15,10.0005 15,3.2505z M3,6.4195C3.089,6.3815 3.181,6.3515 3.272,6.3185 3.524,6.2255 3.783,6.1485 4.052,6.0965 4.062,6.0945 4.072,6.0935 4.082,6.0915 4.38,6.0345 4.686,6.0005 5,6.0005 5.022,6.0005 5.042,6.0055 5.064,6.0055 5.084,6.0055 5.102,6.0005 5.123,6.0005 5.872,6.0005 6.553,6.1355 7.174,6.3805L3,3.2505z M15,1.0005L15,1.2005 9,6.0005 3,1.2005 3,1.0005z" />
+                                                                </DrawingGroup.Children>
+                                                            </DrawingGroup>
+                                                        </DrawingBrush.Drawing>
+                                                    </DrawingBrush>
+                                                </Rectangle.Fill>
+                                            </Rectangle>
+                                        </Viewbox>
+                                        <TextBlock VerticalAlignment="Center"><Run FontSize="15" Text="info@t-app-germany.com"/></TextBlock>
+                                    </StackPanel>
+                                    <StackPanel Orientation="Horizontal">
+                                        <Viewbox>
+                                            <Rectangle Width="32" Height="32"  Margin="10">
+                                                <Rectangle.Fill>
+                                                    <DrawingBrush>
+                                                        <DrawingBrush.Drawing>
+                                                            <DrawingGroup>
+                                                                <DrawingGroup.Children>
+                                                                    <GeometryDrawing Brush="#00FFFFFF" Geometry="F1M16,16L0,16 0,0 16,0z" />
+                                                                    <GeometryDrawing Brush="#FFF6F6F6" Geometry="F1M16,8C16,12.418 12.418,16 8,16 3.582,16 0,12.418 0,8 0,3.582 3.582,0 8,0 12.418,0 16,3.582 16,8" />
+                                                                    <GeometryDrawing Brush="#FFEFEFF0" Geometry="F1M13.5078,9.6475C12.4668,10.0395 11.5158,10.2665 10.6218,10.3815 10.3508,11.3605 9.9298,12.4285 9.3838,13.5755 11.3578,13.0865 12.9298,11.5845 13.5078,9.6475 M6.2118,13.4625C5.7728,12.3855 5.4368,11.3165 5.2308,10.2695 4.1978,10.1035 3.2838,9.8695 2.4868,9.6255 3.0208,11.4385 4.4218,12.8775 6.2118,13.4625 M2.2708,8.4035C3.0478,8.6675 3.9778,8.9355 5.0538,9.1305 4.9888,8.5775 4.9488,8.0295 4.9548,7.4945 4.9598,7.0565 4.9898,6.6415 5.0318,6.2365 4.1808,6.0905 3.4178,5.8995 2.7328,5.6975 2.4238,6.4035 2.2498,7.1805 2.2498,8.0005 2.2498,8.1365 2.2608,8.2695 2.2708,8.4035 M3.2818,4.7175C3.8608,4.8805 4.4928,5.0335 5.1848,5.1535 5.3618,4.1995 5.6268,3.3685 5.9168,2.6455 4.8458,3.0625 3.9298,3.7885 3.2818,4.7175 M7.2678,2.3015C6.8848,3.0955 6.4338,4.0945 6.1998,5.3105 6.7588,5.3735 7.4008,5.4145 7.9998,5.4205 8.5708,5.4255 9.1288,5.4205 9.6998,5.3815 9.4228,4.1205 8.9558,3.0855 8.4878,2.2745 8.3268,2.2615 8.1648,2.2505 7.9998,2.2505 7.7508,2.2505 7.5078,2.2715 7.2678,2.3015 M9.6998,9.3755C9.8408,8.7085 9.9608,8.0835 9.9548,7.5055 9.9508,7.1445 9.9228,6.7985 9.8848,6.4595 9.3798,6.4985 8.8878,6.5135 8.3998,6.5135 8.2648,6.5135 8.1348,6.5115 7.9998,6.5105 7.3488,6.5035 6.7148,6.4595 6.1128,6.3905 6.0758,6.7505 6.0488,7.1195 6.0448,7.5055 6.0388,8.0885 6.0158,8.6405 6.0998,9.2505 6.6898,9.3195 7.3638,9.4145 7.9998,9.4205 8.5818,9.4235 9.1158,9.4165 9.6998,9.3755 M8.0988,13.7455C8.6928,12.5625 9.1458,11.4765 9.4508,10.4855 9.0968,10.5025 8.7448,10.5125 8.3978,10.5125 8.2628,10.5125 8.1288,10.5125 7.9938,10.5105 7.4348,10.5045 6.8918,10.4705 6.3678,10.4185 6.6088,11.5005 6.9928,12.6085 7.4958,13.7245 7.6618,13.7395 7.8298,13.7505 7.9998,13.7505 8.0328,13.7505 8.0658,13.7465 8.0988,13.7455 M9.8808,2.5715C10.2468,3.3365 10.5838,4.2245 10.7978,5.2555 11.4148,5.1605 12.0628,4.9965 12.7488,4.7595 12.0598,3.7515 11.0568,2.9785 9.8808,2.5715 M10.9688,6.3375C11.6958,6.2245 12.4628,6.0305 13.2848,5.7345 13.5838,6.4295 13.7498,7.1955 13.7498,8.0005 13.7498,8.1265 13.7398,8.2505 13.7318,8.3745 12.6938,8.8265 11.7598,9.0955 10.8838,9.2375 10.9938,8.6255 11.0508,8.0435 11.0448,7.4945 11.0408,7.0935 11.0098,6.7115 10.9688,6.3375" />
+                                                                    <GeometryDrawing Brush="#FF1AA1E2" Geometry="F1M9.3838,13.5752C9.9298,12.4292 10.3508,11.3602 10.6218,10.3822 11.5158,10.2662 12.4668,10.0392 13.5078,9.6472 12.9298,11.5842 11.3578,13.0872 9.3838,13.5752 M2.4868,9.6252C3.2838,9.8692 4.1978,10.1032 5.2308,10.2692 5.4368,11.3162 5.7728,12.3862 6.2118,13.4632 4.4218,12.8772 3.0208,11.4382 2.4868,9.6252 M2.2498,8.0002C2.2498,7.1802 2.4238,6.4032 2.7328,5.6972 3.4178,5.8992 4.1808,6.0912 5.0318,6.2362 4.9898,6.6412 4.9598,7.0562 4.9548,7.4942 4.9488,8.0292 4.9888,8.5772 5.0538,9.1312 3.9778,8.9352 3.0478,8.6672 2.2708,8.4032 2.2608,8.2692 2.2498,8.1372 2.2498,8.0002 M5.9168,2.6452C5.6268,3.3682 5.3618,4.1992 5.1848,5.1532 4.4928,5.0332 3.8608,4.8812 3.2818,4.7182 3.9298,3.7882 4.8458,3.0622 5.9168,2.6452 M7.9998,2.2502C8.1648,2.2502 8.3268,2.2612 8.4878,2.2742 8.9558,3.0862 9.4318,4.1202 9.7088,5.3822 9.1378,5.4212 8.5758,5.4262 8.0058,5.4212 7.4058,5.4142 6.8248,5.3732 6.2668,5.3102 6.4998,4.0952 6.8848,3.0962 7.2678,2.3022 7.5078,2.2712 7.7508,2.2502 7.9998,2.2502 M8.0058,9.4212C7.3698,9.4142 6.7578,9.3672 6.1678,9.2982 6.0838,8.6882 6.0388,8.0892 6.0448,7.5062 6.0488,7.1192 6.0758,6.7502 6.1128,6.3902 6.7148,6.4592 7.3428,6.5042 7.9938,6.5112 8.1288,6.5122 8.2628,6.5132 8.3978,6.5132 8.8858,6.5132 9.3798,6.4982 9.8848,6.4592 9.9228,6.7992 9.9508,7.1442 9.9548,7.5062 9.9608,8.0832 9.8868,8.7082 9.7458,9.3752 9.1618,9.4162 8.5878,9.4242 8.0058,9.4212 M7.9998,13.7502C7.8298,13.7502 7.6618,13.7392 7.4958,13.7242 6.9928,12.6082 6.6088,11.5002 6.3678,10.4192 6.8918,10.4712 7.4348,10.5052 7.9938,10.5112 8.1288,10.5122 8.2628,10.5122 8.3978,10.5122 8.7448,10.5122 9.0968,10.5032 9.4508,10.4852 9.1458,11.4762 8.6928,12.5622 8.0988,13.7452 8.0658,13.7462 8.0328,13.7502 7.9998,13.7502 M12.7488,4.7602C12.0628,4.9962 11.4148,5.1602 10.7978,5.2562 10.5838,4.2242 10.2468,3.3372 9.8808,2.5712 11.0568,2.9782 12.0598,3.7512 12.7488,4.7602 M10.9688,6.3382C11.6958,6.2242 12.4628,6.0302 13.2848,5.7342 13.5838,6.4292 13.7498,7.1952 13.7498,8.0002 13.7498,8.1262 13.7398,8.2502 13.7318,8.3742 12.6938,8.8262 11.7598,9.0962 10.8838,9.2372 10.9938,8.6252 11.0508,8.0432 11.0448,7.4942 11.0408,7.0942 11.0098,6.7122 10.9688,6.3382 M14.9998,8.0002C14.9998,7.9202 14.9898,7.8432 14.9888,7.7632 14.8628,4.0082 11.7858,1.0002 7.9998,1.0002 4.1338,1.0002 0.9998,4.1342 0.9998,8.0002 0.9998,8.2042 1.0118,8.4052 1.0298,8.6032 1.0458,8.7832 1.0708,8.9612 1.1008,9.1362 1.1018,9.1412 1.1018,9.1472 1.1028,9.1532 1.5918,12.0962 3.9088,14.4112 6.8528,14.8982 6.8598,14.8992 6.8658,14.9002 6.8728,14.9012 7.0468,14.9302 7.2218,14.9542 7.3998,14.9702 7.5978,14.9882 7.7968,15.0002 7.9998,15.0002 8.2318,15.0002 8.4598,14.9872 8.6848,14.9662 12.2298,14.6212 14.9998,11.6352 14.9998,8.0002" />
+                                                                </DrawingGroup.Children>
+                                                            </DrawingGroup>
+                                                        </DrawingBrush.Drawing>
+                                                    </DrawingBrush>
+                                                </Rectangle.Fill>
+                                            </Rectangle>
+                                        </Viewbox>
+                                        <TextBlock VerticalAlignment="Center"><Run FontSize="15" Text="https://t-app-germany.com"/></TextBlock>
+                                    </StackPanel>
+                                </StackPanel>
+                            </StackPanel>
+                        </StackPanel>
+                    </Grid>
                     <Grid x:Name="Page4Grid" Visibility="Collapsed">
                         <TextBlock HorizontalAlignment="Left" Margin="10" Text="Kasse" VerticalAlignment="Top" TextTrimming="CharacterEllipsis" FontSize="25"/>
                         <StackPanel x:Name="Page4ContentGrid" Margin="0,50,0,0">
@@ -1101,7 +1164,7 @@
                             </ScrollViewer>
                         </Grid>
                     </Grid>
-                    <Grid x:Name="Page6Grid" Visibility="Visible">
+                    <Grid x:Name="Page6Grid" Visibility="Collapsed">
                         <TextBlock HorizontalAlignment="Left" Margin="10" Text="Statistiken" VerticalAlignment="Top" TextTrimming="CharacterEllipsis" FontSize="25"/>
                         <Grid x:Name="Page6ContentGrid" Margin="0,53,0,0">
                             <StackPanel Orientation="Horizontal" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10">
